--- a/eam/common/generator/src/main/resources/templates/ApiController.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ApiController.java.vm
@@ -41,11 +41,8 @@ public class #(simpleName) extends SuperController {
 	@SentinelResource(value = #(agentSimpleName).INSERT , blockHandlerClass = { SentinelExceptionUtil.class } , blockHandler = SentinelExceptionUtil.HANDLER )
 	#end
 	@PostMapping(#(agentSimpleName).INSERT)
-	public Result<#(poSimpleName)> insert(#(voSimpleName) #(voVarName)) {
-		Result<#(poSimpleName)> result=new Result<>();
-		boolean suc=#(serviceVarName).insert(#(voVarName));
-		result.success(suc);
-		if(!suc) result.message("数据插入失败");
+	public Result insert(#(voSimpleName) #(voVarName)) {
+		Result result=#(serviceVarName).insert(#(voVarName));
 		return result;
 	}
 
@@ -62,11 +59,8 @@ public class #(simpleName) extends SuperController {
 	@SentinelResource(value = #(agentSimpleName).DELETE , blockHandlerClass = { SentinelExceptionUtil.class } , blockHandler = SentinelExceptionUtil.HANDLER )
 	#end
 	@PostMapping(#(agentSimpleName).DELETE)
-	public Result<#(poSimpleName)> deleteById(#(controllerMethodParameterDeclare4DeleteById)) {
-		Result<#(poSimpleName)> result=new Result<>();
-		boolean suc=#(serviceVarName).#(implMethod4DeleteById)(#(controllerMethodParameterPassIn4DeleteById));
-		result.success(suc);
-		if(!suc) result.message("数据删除失败");
+	public Result deleteById(#(controllerMethodParameterDeclare4DeleteById)) {
+		Result result=#(serviceVarName).#(implMethod4DeleteById)(#(controllerMethodParameterPassIn4DeleteById));
 		return result;
 	}
 	
@@ -84,14 +78,11 @@ public class #(simpleName) extends SuperController {
 	@ApiOperationSupport(order=3) #end
 	@NotNull(name = #(voMetaSimpleName).#(idsPropertyConst))
 	#if(isEnableMicroService)
-	@SentinelResource(value = #(agentSimpleName).BATCH_DELETE , blockHandlerClass = { SentinelExceptionUtil.class } , blockHandler = SentinelExceptionUtil.HANDLER )
+	@SentinelResource(value = #(agentSimpleName).DELETE_BY_IDS , blockHandlerClass = { SentinelExceptionUtil.class } , blockHandler = SentinelExceptionUtil.HANDLER )
 	#end
-	@PostMapping(#(agentSimpleName).BATCH_DELETE)
-	public Result<#(poSimpleName)> deleteByIds(List<#(idsPropertyType)> #(idsPropertyName)) {
-		Result<#(poSimpleName)> result=new Result<>();
-		boolean suc=#(serviceVarName).deleteByIdsLogical(#(idsPropertyName));
-		result.success(suc);
-		if(!suc) result.message("数据删除失败");
+	@PostMapping(#(agentSimpleName).DELETE_BY_IDS)
+	public Result deleteByIds(List<#(idsPropertyType)> #(idsPropertyName)) {
+		Result result=#(serviceVarName).deleteByIdsLogical(#(idsPropertyName));
 		return result;
 	}
 	#end
@@ -108,11 +99,8 @@ public class #(simpleName) extends SuperController {
 	@SentinelResource(value = #(agentSimpleName).UPDATE , blockHandlerClass = { SentinelExceptionUtil.class } , blockHandler = SentinelExceptionUtil.HANDLER )
 	#end
 	@PostMapping(#(agentSimpleName).UPDATE)
-	public Result<#(poSimpleName)> update(#(voSimpleName) #(voVarName)) {
-		Result<#(poSimpleName)> result=new Result<>();
-		boolean suc=#(serviceVarName).update(#(voVarName),SaveMode.NOT_NULL_FIELDS);
-		result.success(suc);
-		if(!suc) result.message("数据更新失败");
+	public Result update(#(voSimpleName) #(voVarName)) {
+		Result result=#(serviceVarName).update(#(voVarName),SaveMode.NOT_NULL_FIELDS);
 		return result;
 	}
 	
@@ -129,11 +117,8 @@ public class #(simpleName) extends SuperController {
 	@SentinelResource(value = #(agentSimpleName).SAVE , blockHandlerClass = { SentinelExceptionUtil.class } , blockHandler = SentinelExceptionUtil.HANDLER )
 	#end
 	@PostMapping(#(agentSimpleName).SAVE)
-	public Result<#(poSimpleName)> save(#(voSimpleName) #(voVarName)) {
-		Result<#(poSimpleName)> result=new Result<>();
-		boolean suc=#(serviceVarName).save(#(voVarName),SaveMode.NOT_NULL_FIELDS);
-		result.success(suc);
-		if(!suc) result.message("数据保存失败");
+	public Result save(#(voSimpleName) #(voVarName)) {
+		Result result=#(serviceVarName).save(#(voVarName),SaveMode.NOT_NULL_FIELDS);
 		return result;
 	}
 
@@ -159,6 +144,31 @@ public class #(simpleName) extends SuperController {
 		result.success(true).data(role);
 		return result;
 	}
+
+
+	#if(isSimplePk)
+	/**
+	 * 批量删除#(topic) <br>
+	 * 联合主键时，请自行调整实现
+	*/
+		#if(isEnableSwagger)
+		@ApiOperation(value = "批量删除#(topic)")
+		@ApiImplicitParams({
+				@ApiImplicitParam(name = #(voMetaSimpleName).#(idsPropertyConst) , value = "主键清单" , required = true , dataTypeClass=List.class , example = "[1,3,4]")
+		})
+		@ApiOperationSupport(order=3) #end
+		@NotNull(name = #(voMetaSimpleName).#(idsPropertyConst))
+		#if(isEnableMicroService)
+		@SentinelResource(value = #(agentSimpleName).GET_BY_IDS , blockHandlerClass = { SentinelExceptionUtil.class } , blockHandler = SentinelExceptionUtil.HANDLER )
+		#end
+	@PostMapping(#(agentSimpleName).GET_BY_IDS)
+	public Result<List<#(poSimpleName)>> getByIds(List<#(idsPropertyType)> #(idsPropertyName)) {
+		Result<List<#(poSimpleName)>> result=new Result<>();
+		List<#(poSimpleName)> list=#(serviceVarName).getByIds(#(idsPropertyName));
+		result.success(true).data(list);
+		return result;
+	}
+	#end
 
 	
 	/**
