--- a/eam/common/generator/src/main/resources/templates/form.js.vm
+++ b/eam/common/generator/src/main/resources/templates/form.js.vm
@@ -2,14 +2,14 @@
 
 function FormPage() {
 
-	var settings,admin,form,table,layer,util,fox,upload,xmSelect;
+	var settings,admin,form,table,layer,util,fox,upload,xmSelect,foxup;
 	const moduleURL="#(moduleURL)";
 	
 	/**
       * 入口函数，初始化
       */
 	this.init=function(layui) { 	
-     	admin = layui.admin,settings = layui.settings,form = layui.form,upload = layui.upload;
+     	admin = layui.admin,settings = layui.settings,form = layui.form,upload = layui.upload,foxup=layui.foxnicUpload;
 		table = layui.table,layer = layui.layer,util = layui.util,fox = layui.foxnic,xmSelect = layui.xmSelect;
 		
 		//渲染表单组件
@@ -20,10 +20,11 @@ function FormPage() {
 		
 		//绑定提交事件
 		bindButtonEvent();
-		
+
+		#if(!hasUploadField)
 		//调整窗口的高度与位置
 		adjustPopup();
-		
+		#end
 	}
 	
 	function adjustPopup() {
@@ -32,6 +33,7 @@ function FormPage() {
 			var bodyHeight=body.height();
 			var area=admin.changePopupArea(null,bodyHeight);
 			admin.putTempData('#(formAreaKey)', area);
+			window.adjustPopup=adjustPopup;
 		},50);
 	}
 	
@@ -42,23 +44,53 @@ function FormPage() {
 		form.render();
 	   
 	    #for(f : fields)
-	    #if(f.isImageField) 
+	    #if(f.isUploadField)
 	    //渲染图片字段
-	    fox.renderFormUpload({
+		foxup.render({
 			el:"#(f.varName)",
-			upload:function (result,index,upload) {
+			maxFileCount: #(f.uploadField.maxFileCount),
+			displayFileName: #(f.uploadField.displayFileName),
+			#if(f.uploadField.fileType=="image")
+			accept: "image",
+			#else if(f.uploadField.fileType=="video")
+			accept: "video",
+			#else if(f.uploadField.fileType=="audio")
+			accept: "audio",
+			#else if(f.uploadField.fileType=="all")
+			accept: "file",
+			#else
+			accept: "file",
+			#end
+			#if(f.uploadField.getAcceptMimes(", ")!=null)
+			acceptMime:'#(f.uploadField.getAcceptMimes(", "))',
+			#end
+			#if(f.uploadField.getAcceptExts("|")!=null)
+			exts:'#(f.uploadField.getAcceptExts("|"))',
+			#end
+			afterPreview:function(elId,index,fileId,upload){
+				adjustPopup();
+			},
+			afterUpload:function (result,index,upload) {
 				console.log("文件上传后回调")
 			},
-			remove:function (fileId,index,upload) {
-				console.log("文件删除后回调")
+			beforeRemove:function (elId,fileId,index,upload) {
+				console.log("文件删除前回调");
+				return true;
+			},
+			afterRemove:function (elId,fileId,index,upload) {
+				adjustPopup();
 			}
 	    });
 		#else if(f.isSelectField)
-		//渲染下拉字段
+		//渲染 #(f.varName) 下拉字段
 		fox.renderSelectBox({
 			el: "#(f.varName)",
 			radio: #(!f.selectField.muliti),
 			filterable: true,
+			#if(f.selectField.paging)
+			paging: true,
+			pageRemote: true,
+			#end
 			toolbar: {show:true,showIcon:true,list:[ "ALL", "CLEAR","REVERSE"]},
 			//转换数据
 			#if(f.selectField.enumTypeName!=null)
@@ -80,6 +112,7 @@ function FormPage() {
 				var opts=[];
 				if(!data) return opts;
 				for (var i = 0; i < data.length; i++) {
+					if(!data[i]) continue;
 					//请自行调整此处字段的对应关系
 					opts.push({name:data[i].name,value:data[i].id});
 				}
@@ -91,6 +124,7 @@ function FormPage() {
 				//要求格式 :[{name: '水果', value: 1},{name: '蔬菜', value: 2}]
 				var opts=[];
 				for (var i = 0; i < data.length; i++) {
+					if(!data[i]) continue;
 					opts.push({name:data[i].text,value:data[i].code});
 				}
 				return opts;
@@ -106,16 +140,22 @@ function FormPage() {
       */
 	function fillFormData() {
 		var formData = admin.getTempData('#(formDataKey)');
+		#if(isSimplePK)
+		//如果是新建
+		if(!formData.#(idPropertyName)) {
+			adjustPopup();
+		}
+		#end
 		var fm=$('#data-form');
 		if (formData) {
 			fm[0].reset();
 			form.val('data-form', formData);
 
 	     	#for(f : fields)
-		    #if(f.isImageField)
-			//设置  #(f.label)  显示图片
+		    #if(f.isUploadField)
+			//设置  #(f.label)  显示附件
 		    if($("##(f.varName)").val()) {
-		    	$("##(f.varName)-image").attr("src","/service-storage/sys-file/download?id="+$("##(f.varName)").val());
+				foxup.fill("#(f.varName)",$("##(f.varName)").val());
 		    }
 		    #end
 		    #end
@@ -123,11 +163,16 @@ function FormPage() {
 			#for(f : fields)
 			#if(f.isSelectField)
 			//设置 #(f.label) 下拉框选中值
+			var #(f.varName)Select=xmSelect.get("##(f.varName)",true);
+			var #(f.varName)Opionts=[];
 			if (formData.#(f.selectField.fillBy))	{
-				var #(f.varName)Select=xmSelect.get("##(f.varName)",true)
-				var #(f.varName)Opionts=#(f.varName)Select.options.transform(formData.#(f.selectField.fillBy));
-				#(f.varName)Select.setValue(#(f.varName)Opionts);
+				#if(f.selectField.muliti)
+				#(f.varName)Opionts=#(f.varName)Select.options.transform(formData.#(f.selectField.fillBy));
+				#else
+				#(f.varName)Opionts=#(f.varName)Select.options.transform([formData.#(f.selectField.fillBy)]);
+				#end
 			}
+			#(f.varName)Select.setValue(#(f.varName)Opionts);
 			#end
 			#end
 
@@ -167,6 +212,11 @@ function FormPage() {
 			#if(f.isSelectField)
 			//获取 #(f.label) 下拉框的值
 			data.field["#(f.varName)"]=xmSelect.get("##(f.varName)",true).getValue("value");
+			#if(!f.selectField.muliti)
+			if(data.field["#(f.varName)"] && data.field["#(f.varName)"].length>0) {
+				data.field["#(f.varName)"]=data.field["#(f.varName)"][0];
+			}
+			#end
 			#end
 			#end
 
@@ -179,7 +229,7 @@ function FormPage() {
 	                layer.msg(data.message, {icon: 1, time: 500});
 	                admin.finishPopupCenter();
 	            } else {
-	                layer.msg(data.message, {icon: 2, time: 500});
+	                layer.msg(data.message, {icon: 2, time: 1000});
 	            }
 	        }, "POST");
 	        
@@ -197,7 +247,8 @@ layui.config({
 	dir: layuiPath,
 	base: '/module/'
 }).extend({
-	xmSelect: 'xm-select/xm-select'
-}).use(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect'],function() {
+	xmSelect: 'xm-select/xm-select',
+	foxnicUpload: 'upload/foxnic-upload'
+}).use(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect','foxnicUpload'],function() {
 	(new FormPage()).init(layui);
 });
