--- a/eam/view/view-eam/src/main/resources/public/business/eam/brand/brand_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/brand/brand_list.html
@@ -2,7 +2,7 @@
 /**
  * 品牌 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-06-19 20:16:31
+ * @since 2021-07-19 15:07:57
  */
  -->
  <!DOCTYPE html>
@@ -19,22 +19,25 @@
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
 </head>
 
-<body>
+<body style="overflow-y: hidden">
 
 <div class="layui-card">
  
     <div class="layui-card-body">
-        <div class="layui-form toolbar">
-            <span th:text="${lang.translate('搜索')}">搜索</span>：
-            <select id="search-field">
-                <option value="" th:text="${lang.translate('-请选择-')}">-请选择-</option>
-                <option value="id" th:text="${lang.translate('主键')}">主键</option>
-                <option value="brandName" th:text="${lang.translate('名称')}">名称</option>
-            </select>&emsp;
-            <input id="search-input" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入关键字')}"/>&emsp;
+        <div class="layui-form toolbar search-bar">
+
+            <div class="search-unit">
+                <span th:text="${lang.translate('主键')}" class="search-label">主键</span><span class="search-colon">:</span>
+                <input id="id" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入主键')}"/>
+            </div>
+            <div class="search-unit">
+                <span th:text="${lang.translate('名称')}" class="search-label">名称</span><span class="search-colon">:</span>
+                <input id="brandName" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入名称')}"/>
+            </div>
+
             <button id="search-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i><span th:text="${lang.translate('搜索')}">搜索</span></button>
-            <button id="add-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('添加')}">添加</span></button>
-            <button id="delete-button" class="layui-btn icon-btn layui-btn-danger"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
+            <button th:if="${perm.checkAuth('eam_brand:create')}" id="add-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('添加')}">添加</span></button>
+            <button th:if="${perm.checkAuth('eam_brand:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
             
         </div>
 
@@ -49,13 +52,13 @@
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit" th:text="${lang.translate('修改')}">修改</a>
-    <a class="layui-btn layui-btn-xs" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
+    <a th:if="${perm.checkAuth('eam_brand:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit" th:text="${lang.translate('修改')}">修改</a>
+    <a th:if="${perm.checkAuth('eam_brand:delete')}" class="layui-btn layui-btn-xs" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
 </script>
 
 
 <script th:inline="javascript">
-    var LAYUI_TABLE_WIDTH_CONFIG= [[${layuiTableWidthConfig}]];
+    var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
 </script>
 
 <script src="/business/eam/brand/brand_list.js"></script>
