--- a/eam/common/generator/src/main/resources/templates/ServiceInterface.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ServiceInterface.java.vm
@@ -1,150 +1,105 @@
-package com.dt.eam.eam.service;
+package #(package);
 
-import com.github.foxnic.dao.data.PagedList;
-import com.github.foxnic.dao.data.SaveMode;
-import com.github.foxnic.dao.entity.ISuperService;
-import com.github.foxnic.sql.expr.ConditionExpr;
-import com.github.foxnic.sql.expr.OrderBy;
-import com.github.foxnic.sql.meta.DBField;
-import com.github.foxnic.dao.excel.ValidateResult;
+#(imports)
 
-import com.github.foxnic.springboot.web.DownloadUtil;
-import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.multipart.MultipartHttpServletRequest;
-import com.github.foxnic.dao.excel.ExcelWriter;
-import com.github.foxnic.dao.excel.ExcelStructure;
+#(classJavaDoc)
 
-
-import com.dt.eam.domain.eam.Goods;
-import com.dt.eam.domain.eam.GoodsVO;
-import java.util.List;
-import com.github.foxnic.api.transter.Result;
-import com.github.foxnic.dao.data.PagedList;
-import java.io.InputStream;
-
-/**
- * <p>
- * 资产物品表 服务接口
- * </p>
- * @author 李方捷 , leefangjie@qq.com
- * @since 2021-06-19 20:16:33
-*/
-
-public interface IGoodsService extends ISuperService<Goods> {
+public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	
 	/**
 	 * 插入实体
-	 * @param goods 实体数据
+	 * @param #(poVar) 实体数据
 	 * @return 插入是否成功
 	 * */
-	boolean insert(Goods goods);
+	Result insert(#(poSimpleName) #(poVar));
  
 	/**
 	 * 批量插入实体，事务内
-	 * @param goodsList 实体数据清单
+	 * @param #(poListVar) 实体数据清单
 	 * @return 插入是否成功
 	 * */
-	boolean insertList(List<Goods> goodsList);
+	Result insertList(List<#(poSimpleName)> #(poListVar));
 	
 	
-		
-	/**
-	 * 按主键删除 资产物品
-	 *
-	 * @param id 主键
-	 * @return 删除是否成功
-	 */
-	boolean deleteByIdPhysical(String id);
+	#(deleteByIdMethods)
 	
-	/**
-	 * 按主键删除 资产物品
-	 *
-	 * @param id 主键
-	 * @return 删除是否成功
-	 */
-	boolean deleteByIdLogical(String id);
-	
-	
+	#if(isSimplePK)
 	/**
 	 * 批量物理删除，仅支持单字段主键表
 	 * @param ids 主键清单
 	 * @return 是否删除成功
 	 * */
-	<T> boolean deleteByIdsPhysical(List<T> ids);
+	<T> Result deleteByIdsPhysical(List<T> #(idPropertyName)s);
 	
 	/**
 	 * 批量逻辑删除，仅支持单字段主键表
 	 * @param ids 主键清单
 	 * @return 是否删除成功
 	 * */
-	<T> boolean deleteByIdsLogical(List<T> ids);
+	<T> Result deleteByIdsLogical(List<T> #(idPropertyName)s);
+	#end
 	
-		
-	/**
-	 * 按主键更新字段 资产物品
-	 *
-	 * @param id 主键
-	 * @return 是否更新成功
-	 */
-	boolean update(DBField field,Object value , String id);
+	#(updateByIdMethod)
 	
 	/**
 	 * 更新实体
-	 * @param goods 数据对象
+	 * @param #(poVar) 数据对象
 	 * @param mode 保存模式
 	 * @return 保存是否成功
 	 * */
-	boolean update(Goods goods , SaveMode mode);
+	Result update(#(poSimpleName) #(poVar) , SaveMode mode);
 	
 	
 	/**
 	 * 更新实体集，事务内
-	 * @param goodsList 数据对象列表
+	 * @param #(poListVar) 数据对象列表
 	 * @param mode 保存模式
 	 * @return 保存是否成功
 	 * */
-	boolean updateList(List<Goods> goodsList, SaveMode mode);
+	Result updateList(List<#(poSimpleName)> #(poListVar), SaveMode mode);
 	
 	/**
 	 * 保存实体，如果主键值不为 null，则更新，否则插入
-	 * @param goods 实体数据
+	 * @param #(poVar) 实体数据
 	 * @param mode 保存模式
 	 * @return 保存是否成功
 	 * */
-	boolean save(Goods goods , SaveMode mode);
+	Result save(#(poSimpleName) #(poVar) , SaveMode mode);
 	
 	/**
 	 * 保存实体，如果主键值不为null，则更新，否则插入
-	 * @param goodsList 实体数据清单
+	 * @param #(poListVar) 实体数据清单
 	 * @param mode 保存模式
 	 * @return 保存是否成功
 	 * */
-	boolean saveList(List<Goods> goodsList , SaveMode mode);
+	Result saveList(List<#(poSimpleName)> #(poListVar) , SaveMode mode);
 	
 	/**
 	 * 检查实体中的数据字段是否已经存在
-	 * @param goods  实体对象
+	 * @param #(poVar)  实体对象
 	 * @param field  字段清单，至少指定一个
 	 * @return 是否已经存在
 	 * */
-	boolean checkExists(Goods goods,DBField... field);
+	boolean checkExists(#(poSimpleName) #(poVar),DBField... field);
  
+	#(getByIdMethod)
+	#if(isSimplePK)
 		
 	/**
-	 * 按主键获取 资产物品
-	 *
-	 * @param id 主键
-	 * @return Goods 数据对象
-	 */
-	Goods getById(String id);
-	
+	 * 检查实体中的数据字段是否已经存在
+	 * @param #(idPropertyName)s  主键清单
+	 * @return 实体集
+	 * */
+	List<#(poSimpleName)> getByIds(List<#(idPropertyType)> #(idPropertyName)s);
+	#end
+
 	/**
 	 * 检查 角色 是否已经存在
 	 *
-	 * @param goods 数据对象
+	 * @param #(poVar) 数据对象
 	 * @return 判断结果
 	 */
-	Result<Goods> checkExists(Goods goods);
+	Result<#(poSimpleName)> checkExists(#(poSimpleName) #(poVar));
  
 	/**
 	 * 根据实体数构建默认的条件表达式
@@ -152,14 +107,14 @@ public interface IGoodsService extends ISuperService<Goods> {
 	 * @param stringFuzzy 字符串是否使用模糊匹配
 	 * @return ConditionExpr 条件表达式
 	 * */
-	ConditionExpr buildQueryCondition(Goods sample,boolean stringFuzzy);
+	ConditionExpr buildQueryCondition(#(poSimpleName) sample,boolean stringFuzzy);
 	
 	/**
 	 * 根据实体数构建默认的条件表达式，字符串使用模糊匹配
 	 * @param sample 数据样例
 	 * @return ConditionExpr 条件表达式
 	 * */
-	ConditionExpr buildQueryCondition(Goods sample);
+	ConditionExpr buildQueryCondition(#(poSimpleName) sample);
 	
 	/**
 	 * 根据实体数构建默认的条件表达式, 字符串是否使用模糊匹配
@@ -167,7 +122,7 @@ public interface IGoodsService extends ISuperService<Goods> {
 	 * @param tableAliase 数据表别名
 	 * 	@return ConditionExpr 条件表达式
 	 * */
-	ConditionExpr buildQueryCondition(Goods sample,String tableAliase);
+	ConditionExpr buildQueryCondition(#(poSimpleName) sample,String tableAliase);
 	
 	/**
 	 * 根据实体数构建默认的条件表达式
@@ -176,14 +131,14 @@ public interface IGoodsService extends ISuperService<Goods> {
 	 * @param tableAliase 数据表别名
 	 * @return ConditionExpr 条件表达式
 	 * */
-	ConditionExpr buildQueryCondition(Goods sample,boolean stringFuzzy,String tableAliase);
+	ConditionExpr buildQueryCondition(#(poSimpleName) sample,boolean stringFuzzy,String tableAliase);
 	
 	/**
 	 * 查询实体集合，默认情况下，字符串使用模糊匹配，非字符串使用精确匹配
 	 * @param sample  查询条件
 	 * @return 查询结果
 	 * */
-	List<Goods> queryList(Goods sample);
+	List<#(poSimpleName)> queryList(#(poSimpleName) sample);
  
 	/**
 	 * 查询实体集合，默认情况下，字符串使用模糊匹配，非字符串使用精确匹配
@@ -192,7 +147,7 @@ public interface IGoodsService extends ISuperService<Goods> {
 	 * @param orderBy  排序
 	 * @return 查询结果
 	 * */
-	List<Goods> queryList(Goods sample,ConditionExpr condition,OrderBy orderBy);
+	List<#(poSimpleName)> queryList(#(poSimpleName) sample,ConditionExpr condition,OrderBy orderBy);
 	
 	/**
 	 * 查询实体集合，默认情况下，字符串使用模糊匹配，非字符串使用精确匹配
@@ -200,7 +155,7 @@ public interface IGoodsService extends ISuperService<Goods> {
 	 * @param orderBy  排序
 	 * @return 查询结果
 	 * */
-	List<Goods> queryList(Goods sample,OrderBy orderBy);
+	List<#(poSimpleName)> queryList(#(poSimpleName) sample,OrderBy orderBy);
 	
 	/**
 	 * 查询实体集合，默认情况下，字符串使用模糊匹配，非字符串使用精确匹配
@@ -208,14 +163,14 @@ public interface IGoodsService extends ISuperService<Goods> {
 	 * @param condition  其它条件
 	 * @return 查询结果
 	 * */
-	List<Goods> queryList(Goods sample,ConditionExpr condition);
+	List<#(poSimpleName)> queryList(#(poSimpleName) sample,ConditionExpr condition);
 	
 	/**
 	 * 查询单个实体
 	 * @param sample  查询条件
 	 * @return 查询结果
 	 * */
-	Goods queryEntity(Goods sample);
+	#(poSimpleName) queryEntity(#(poSimpleName) sample);
 	
 	/**
 	 * 分页查询实体集
@@ -224,7 +179,7 @@ public interface IGoodsService extends ISuperService<Goods> {
 	 * @param pageIndex 页码
 	 * @return 查询结果
 	 * */
-	PagedList<Goods> queryPagedList(Goods sample,int pageSize,int pageIndex);
+	PagedList<#(poSimpleName)> queryPagedList(#(poSimpleName) sample,int pageSize,int pageIndex);
 	
 	/**
 	 * 分页查询实体集
@@ -235,7 +190,7 @@ public interface IGoodsService extends ISuperService<Goods> {
 	 * @param orderBy  排序
 	 * @return 查询结果
 	 * */
-	PagedList<Goods> queryPagedList(Goods sample,ConditionExpr condition,OrderBy orderBy,int pageSize,int pageIndex);
+	PagedList<#(poSimpleName)> queryPagedList(#(poSimpleName) sample,ConditionExpr condition,OrderBy orderBy,int pageSize,int pageIndex);
 	
 	/**
 	 * 分页查询实体集
@@ -245,7 +200,7 @@ public interface IGoodsService extends ISuperService<Goods> {
 	 * @param condition  其它条件
 	 * @return 查询结果
 	 * */
-	PagedList<Goods> queryPagedList(Goods sample,ConditionExpr condition,int pageSize,int pageIndex);
+	PagedList<#(poSimpleName)> queryPagedList(#(poSimpleName) sample,ConditionExpr condition,int pageSize,int pageIndex);
 	
 	/**
 	 * 分页查询实体集
@@ -255,7 +210,7 @@ public interface IGoodsService extends ISuperService<Goods> {
 	 * @param orderBy  排序
 	 * @return 查询结果
 	 * */
-	PagedList<Goods> queryPagedList(Goods sample,OrderBy orderBy,int pageSize,int pageIndex);
+	PagedList<#(poSimpleName)> queryPagedList(#(poSimpleName) sample,OrderBy orderBy,int pageSize,int pageIndex);
  
  	/**
 	 * 查询指定字段的数据清单
@@ -281,7 +236,7 @@ public interface IGoodsService extends ISuperService<Goods> {
 	/**
 	 * 导出 Excel
 	 * */
-	ExcelWriter exportExcel(Goods sample);
+	ExcelWriter exportExcel(#(poSimpleName) sample);
 
 	/**
 	 * 导出用于数据导入的 Excel 模版
