bug修复与优化

--- a/eam/common/generator/src/main/resources/templates/list.html.vm
+++ b/eam/common/generator/src/main/resources/templates/list.html.vm
@@ -101,6 +101,7 @@
     #else if(f.isSelectField)
     #end
     #end
+    var AUTH_PREFIX="#(authPrefix)";
 </script>
 
 <script src="#(jsURI)"></script>
