--- a/eam/view/view-eam/src/main/resources/public/business/eam/manufacturer/manufacturer_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/manufacturer/manufacturer_form.html
@@ -2,7 +2,7 @@
 /**
  * 生产厂商 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-06-12 14:21:18
+ * @since 2021-07-25 12:37:10
  */
  -->
  <!DOCTYPE html>
@@ -15,27 +15,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="/assets/css/admin.css"/>
-    <link rel="stylesheet" href="/module/formSelects/formSelects-v4.css"/>
     <link rel="stylesheet" href="/assets/css/foxnic-web.css">
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
 </head>
 
-<body>
+<body style="overflow-y: hidden">
 
-<form id="data-form" lay-filter="data-form" class="layui-form model-form">
+<form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
     <input name="id" id="id"  type="hidden"/>
     
-    <div class="layui-form-item">
+    <div class="layui-form-item" >
         <label class="layui-form-label" th:text="${lang.translate('名称')}">名称</label>
         <div class="layui-input-block">
-            <input id="name" name="name" th:placeholder="${ lang.translate('请输入') +' '+ lang.translate('名称') }" type="text" class="layui-input"    />
+            <input lay-filter="manufacturerName" id="manufacturerName" name="manufacturerName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('名称') }" type="text" class="layui-input"   />
+        </div>
+    </div>
+    
+	
+    
+    <div class="layui-form-item" >
+        <label class="layui-form-label" th:text="${lang.translate('所在地')}">所在地</label>
+        <div class="layui-input-block">
+            <input lay-filter="location" id="location" name="location" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('所在地') }" type="text" class="layui-input"   />
+        </div>
+    </div>
+    
+	
+    
+    <div class="layui-form-item" >
+        <label class="layui-form-label" th:text="${lang.translate('备注')}">备注</label>
+        <div class="layui-input-block">
+            <input lay-filter="manufacturerNotes" id="manufacturerNotes" name="manufacturerNotes" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('备注') }" type="text" class="layui-input"   />
         </div>
     </div>
     
 	
 
     <div class="layui-form-item model-form-footer">
-        <button class="layui-btn layui-btn-primary" ew-event="closeDialog" type="button" th:text="${lang.translate('取消')}">取消</button>
-        <button class="layui-btn"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
+        <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}">取消</button>
+        <button th:if="${perm.checkAnyAuth('eam_manufacturer:create','eam_manufacturer:update','eam_manufacturer:save')}" class="layui-btn"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
     </div>
 </form>
 
