bug修复与优化

--- a/eam/view/view-eam/src/main/resources/public/business/eam/brand/brand_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/brand/brand_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 品牌 列表页 JS 脚本
- * @author 金杰 , maillank@qq.com
- * @since 2021-07-24 11:03:28
+ * @author 李方捷 , leefangjie@qq.com
+ * @since 2021-07-25 13:24:12
  */
  -->
  <!DOCTYPE html>
@@ -59,6 +59,7 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
+    var AUTH_PREFIX="eam_brand";
 </script>
 
 <script src="/business/eam/brand/brand_list.js"></script>
