--- a/eam/view/view-eam/src/main/resources/public/business/eam/maintainer/maintainer_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/maintainer/maintainer_form.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 维保厂商 列表页 JS 脚本
- * @author 金杰 , maillank@qq.com
- * @since 2021-07-25 08:25:57
+ * @author 李方捷 , leefangjie@qq.com
+ * @since 2021-07-25 13:25:38
  */
  -->
  <!DOCTYPE html>
