--- a/eam/view/view-eam/src/main/resources/public/business/eam/manufacturer/manufacturer_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/manufacturer/manufacturer_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 生产厂商 列表页 JS 脚本
- * @author 金杰 , maillank@qq.com
- * @since 2021-06-12 14:21:18
+ * @author 李方捷 , leefangjie@qq.com
+ * @since 2021-07-25 13:25:46
  */
  -->
  <!DOCTYPE html>
@@ -15,26 +15,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="/assets/css/admin.css"/>
-    <link rel="stylesheet" href="/module/formSelects/formSelects-v4.css"/>
     <link rel="stylesheet" href="/assets/css/foxnic-web.css">
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
 </head>
 
-<body>
+<body style="overflow-y: hidden">
 
 <div class="layui-card">
  
     <div class="layui-card-body">
-        <div class="layui-form toolbar">
-            <span th:text="${lang.translate('搜索')}">搜索</span>：
-            <select id="search-field">
-                <option value="" th:text="${lang.translate('-请选择-')}">-请选择-</option>
-                <option value="id" th:text="${lang.translate('主键')}">主键</option>
-                <option value="name" th:text="${lang.translate('名称')}">名称</option>
-            </select>&emsp;
-            <input id="search-input" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入关键字')}"/>&emsp;
+        <div class="layui-form toolbar search-bar">
+
+            <div class="search-unit">
+                <span th:text="${lang.translate('主键')}" class="search-label">主键</span><span class="search-colon">:</span>
+                <input id="id" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入主键')}"/>
+            </div>
+            <div class="search-unit">
+                <span th:text="${lang.translate('名称')}" class="search-label">名称</span><span class="search-colon">:</span>
+                <input id="manufacturerName" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入名称')}"/>
+            </div>
+            <div class="search-unit">
+                <span th:text="${lang.translate('所在地')}" class="search-label">所在地</span><span class="search-colon">:</span>
+                <input id="location" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入所在地')}"/>
+            </div>
+            <div class="search-unit">
+                <span th:text="${lang.translate('备注')}" class="search-label">备注</span><span class="search-colon">:</span>
+                <input id="manufacturerNotes" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入备注')}"/>
+            </div>
+
             <button id="search-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i><span th:text="${lang.translate('搜索')}">搜索</span></button>
-            <button id="add-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('添加')}">添加</span></button>
-            <button id="delete-button" class="layui-btn icon-btn layui-btn-danger"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
+            <button th:if="${perm.checkAuth('eam_manufacturer:create')}" id="add-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('添加')}">添加</span></button>
+            <button th:if="${perm.checkAuth('eam_manufacturer:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
             
         </div>
 
@@ -49,8 +60,14 @@
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit" th:text="${lang.translate('修改')}">修改</a>
-    <a class="layui-btn layui-btn-xs" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
+    <a th:if="${perm.checkAuth('eam_manufacturer:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit" th:text="${lang.translate('修改')}">修改</a>
+    <a th:if="${perm.checkAuth('eam_manufacturer:delete')}" class="layui-btn layui-btn-xs" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
+</script>
+
+
+<script th:inline="javascript">
+    var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
+    var AUTH_PREFIX="eam_manufacturer";
 </script>
 
 <script src="/business/eam/manufacturer/manufacturer_list.js"></script>
