--- a/eam/view/view-eam/src/main/resources/public/business/eam/safetylevel/safetylevel_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/safetylevel/safetylevel_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 风险等级 列表页 JS 脚本
- * @author 李方捷 , leefangjie@qq.com
- * @since 2021-07-25 13:26:58
+ * @author 金杰 , maillank@qq.com
+ * @since 2021-07-25 13:47:11
  */
  -->
  <!DOCTYPE html>
