--- a/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_form.html
+++ b/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_form.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 数据中心 列表页 JS 脚本
- * @author 金杰 , maillank@qq.com
- * @since 2021-07-26 17:20:22
+ * @author 李方捷 , leefangjie@qq.com
+ * @since 2021-07-26 18:16:45
  */
  -->
  <!DOCTYPE html>
