--- a/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_form.html
+++ b/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_form.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
- * 数据中心 列表页 JS 脚本
+ * 机柜管理 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-07-26 17:20:22
+ * @since 2021-07-27 09:19:34
  */
  -->
  <!DOCTYPE html>
@@ -11,7 +11,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-	<title th:text="${lang.translate('数据中心')}">数据中心</title>
+	<title th:text="${lang.translate('机柜管理')}">机柜管理</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="/assets/css/admin.css"/>
@@ -23,14 +23,14 @@
 
 <form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
     <input name="id" id="id"  type="hidden"/>
-    
-    <div class="layui-form-item" >
-        <label class="layui-form-label" th:text="${lang.translate('数据中心')}">数据中心</label>
-        <div class="layui-input-block">
-            <input lay-filter="dcId" id="dcId" name="dcId" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('数据中心') }" type="text" class="layui-input"   />
+
+        <div class="layui-form-item" >
+            <label class="layui-form-label" th:text="${lang.translate('数据中心')}">数据中心</label>
+            <div class="layui-input-block">
+                <div id="dcId" th:data="${'/service-datacenter/dc-info/query-paged-list'}"></div>
+            </div>
         </div>
-    </div>
-    
+
 	
     
     <div class="layui-form-item" >
