--- a/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_list.html
+++ b/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
- * 数据中心 列表页 JS 脚本
+ * 机柜管理 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-07-26 17:20:21
+ * @since 2021-07-27 09:19:32
  */
  -->
  <!DOCTYPE html>
@@ -11,7 +11,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-    <title th:text="${lang.translate('数据中心')}">数据中心</title>
+    <title th:text="${lang.translate('机柜管理')}">机柜管理</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="/assets/css/admin.css"/>
@@ -37,10 +37,6 @@
             <div class="search-unit">
                 <span th:text="${lang.translate('名称')}" class="search-label">名称</span><span class="search-colon">:</span>
                 <input id="rackName" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入名称')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('容量')}" class="search-label">容量</span><span class="search-colon">:</span>
-                <input id="rackCaptical" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入容量')}"/>
             </div>
             <div class="search-unit">
                 <span th:text="${lang.translate('标签')}" class="search-label">标签</span><span class="search-colon">:</span>
